[gd_scene load_steps=2 format=3 uid="uid://cclx8ho54yvwu"]

[ext_resource type="Script" path="res://addons/QuickExtension/Dialogs/welcome.gd" id="1_q0xnq"]

[node name="Welcome" type="Window"]
disable_3d = true
transparent_bg = true
title = "Configure plugin..."
initial_position = 4
size = Vector2i(423, 500)
wrap_controls = true
unresizable = true
always_on_top = true
script = ExtResource("1_q0xnq")

[node name="Container" type="VBoxContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 419.0
offset_bottom = 496.0

[node name="Title" type="Label" parent="Container"]
layout_mode = 2
text = "It looks like this is your first time using this plugin!"

[node name="Label" type="Label" parent="Container"]
layout_mode = 2
text = "Select your language:"

[node name="Languages" type="OptionButton" parent="Container"]
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "C++"

[node name="cpp" type="VBoxContainer" parent="Container"]
layout_mode = 2

[node name="Label" type="Label" parent="Container/cpp"]
layout_mode = 2
text = "Sources:"

[node name="Sources" type="LineEdit" parent="Container/cpp"]
layout_mode = 2
placeholder_text = "res://cpp/sources"

[node name="HeadersOption" type="CheckButton" parent="Container/cpp"]
layout_mode = 2
text = "Has separate headers?"

[node name="Label2" type="Label" parent="Container/cpp"]
visible = false
layout_mode = 2
text = "Headers (*.h / *.hpp files):"

[node name="Headers" type="LineEdit" parent="Container/cpp"]
visible = false
layout_mode = 2
placeholder_text = "res://cpp/headers"

[node name="Register Template" type="CheckButton" parent="Container/cpp"]
layout_mode = 2
button_pressed = true
text = "Use register_types.cpp template?"

[node name="Confirm" type="Button" parent="Container"]
layout_mode = 2
text = "Okay"

[connection signal="toggled" from="Container/cpp/HeadersOption" to="." method="_on_headers_option_toggled"]
[connection signal="button_up" from="Container/Confirm" to="." method="_on_confirm_button_up"]
